alignment fix

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -325,12 +325,13 @@ scrollbar-width: none;  /* Firefox */
   list-style-type: none;
   color: grey;
   font-size: 0.7rem;
-  padding: 0 0 5px 15px;
+  padding: 0 0 5px 10px;
   li{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    gap: 5px;
   }
 }
 
@@ -340,6 +341,10 @@ scrollbar-width: none;  /* Firefox */
   border-radius: 25px;
   font-size: 0.7rem;
   width: min-content;
+  height: 33px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tiblock {
